# Tabssh_harmonyos

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  IMPLEMENTATION_STATUS.md  LICENSE  LICENSE.md  NOTICE  README.md  README_zh.md  SECURITY.md  SUPPORT.md  THIRD_PARTY_NOTICES.md  build-profile.json5  oh-package.json5
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  compliance_review.yml  config.yml  feature_request.yml
.github/workflows/: build-harmonyos.yml  cleanup-releases.yml  online-build.yml  test-harmonyos-sdk-token.yml
AppScope/: app.json5
AppScope/resources/base/element/: string.json
docs/: AGENT_HANDOFF.md  AGENT_MEMORY.md  ANDROID_PARITY_ROADMAP.md  ANDROID_TO_HARMONY_MAPPING.md  BUILD_READY.md  BUILD_TEST.md  CONNECTION_GROUP_TEST.md  CORE.md  CURRENT_STATUS.md  FILES.md  GIT_PUBLISH.md  IMPLEMENTATION_STEPS.md  ISSUES.md  LEGAL.md  LIBSSH2_COMPILE_GUIDE.md  NATIVE_CORE_FUNCTIONS.md  NEW_CHAT_PROMPT.md  PROGRESS.md  PROICONS_ICONS.md  PULL_TEST_GUIDE.md  README.md  RELEASE_CHECKLIST.md  SSH_MVP_ROADMAP.md  UI.md  UPSTREAM_REFERENCES.md  WORKSPACE_PATHS.md
entry/: build-profile.json5  oh-package.json5
entry/src/main/: module.json5
entry/src/main/cpp/: CMakeLists.txt  napi_init.cpp  native_ssh_core.h  native_ssh_libssh2.cpp  native_ssh_mock.cpp
entry/src/main/cpp/types/libentry/: index.d.ts
entry/src/main/ets/common/: AppSettings.ets  AppTheme.ets  BuildInfo.ets  I18n.ets  IconUtils.ets
entry/src/main/ets/common/models/: ConnectionAuditLog.ets  ConnectionGroup.ets  ConnectionProfile.ets  TerminalModels.ets
entry/src/main/ets/common/native/: NativeSshCore.ets
entry/src/main/ets/common/services/: ConnectionImportExportService.ets  PortForwardManager.ets  TerminalSessionManager.ets
entry/src/main/ets/common/storage/: ProfileRepository.ets
entry/src/main/ets/common/terminal/: TerminalEmulator.ets
entry/src/main/ets/entryability/: EntryAbility.ets
entry/src/main/ets/pages/: AboutPage.ets  AuditLogPage.ets  ConnectionEditPage.ets  ConnectionGroupPage.ets  ConnectionHistoryPage.ets  ConnectionImportExportPage.ets  Index.ets  PortForwardPage.ets  SavedHostsPage.ets  SettingsPage.ets  SftpPage.ets  TerminalPage.ets  TerminalSettingsPage.ets  ToolboxPage.ets
entry/src/main/resources/base/element/: color.json  string.json
entry/src/main/resources/base/profile/: main_pages.json
reports/: 2026-06-25-ssh-mvp-audit.md  connection_group_audit_latest.md  project_audit_latest.md
scripts/: README.md  audit_connection_groups.ps1  audit_project.ps1  backup_project.ps1  build_mock_hap.ps1  build_native_dependencies.ps1  build_real_hap.ps1  clean_project.ps1  install_and_smoke.ps1  run_hvigor_with_sdk_patch.js  run_local_checks.ps1  stage_project_for_build.ps1  start_test_sshd.ps1  test_terminal_emulator.ps1  update_build_info.ps1  verify_mock_hap.ps1  verify_real_hap.ps1
